# fuck-around-and-find-out

./: LICENSE  README.md  pyproject.toml
src/no_fucking_try_again/: __main__.py  cli.py  detector.py  messages.py  trigger.py
